--- a/index.html
+++ b/index.html
@@ -99,16 +99,17 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>24</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>16 December 1997</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>priskilaelvy97@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Pasir Gudang, Johor, Malaysia</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Interest:</strong> <span>Hiking, Music, Writing Programming</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>24</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor of Information Technology (Hons.) Information Systems Engineering</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
+                  
+                  
                 </ul>
               </div>
             </div>
