--- a/index.html
+++ b/index.html
@@ -414,7 +414,8 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <p><i>“The only way to do great work is to love what you do. If you haven’t found it yet, keep looking. Don’t settle.” – Steve Jobs</i></p>
+      <p><i>“The only way to do great work is to love what you do. If you haven’t found it yet, keep looking. Don’t settle.”</i></p>
+      <p><i> – Steve Jobs</i></p>
     </div>
   </footer><!-- End Footer -->
   
