--- a/index.html
+++ b/index.html
@@ -275,12 +275,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/wasted.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/wasted.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Wasted Website</h4>
                 <p>Group Project</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/wasted.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Wasted Website"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/wasted.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Wasted Website"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-wasted.html" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -289,12 +289,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/SEAS.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/SEAS.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>School Exchange Approval System</h4>
                 <p>Final Year Project</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/SEAS.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="School Exchange Approval System"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/SEAS.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="School Exchange Approval System"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-SEAS.html" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -303,12 +303,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/UCUA.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/UCUA.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>U-See U-Act</h4>
                 <p>Internship (Mac - Aug 2021) Project</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/UCUA.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="U-See U-Act"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/UCUA.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="U-See U-Act"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-UCUA.html" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
