--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                 <p>Group Project</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/wasted.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Wasted Website"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-wasted.html" title="More Details"><i class="bx bx-link"></i></a>
+                  <a href="portfolio-wasted.html" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -295,7 +295,7 @@
                 <p>Final Year Project</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/SEAS.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="School Exchange Approval System"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-SEAS.html" title="More Details"><i class="bx bx-link"></i></a>
+                  <a href="portfolio-SEAS.html" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -309,7 +309,7 @@
                 <p>Internship (Mac - Aug 2021) Project</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/UCUA.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="U-See U-Act"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-UCUA.html" title="More Details"><i class="bx bx-link"></i></a>
+                  <a href="portfolio-UCUA.html" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
