--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                 <p>Group Project</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/wasted.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Wasted Website"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
+                  <a href="portfolio-wasted.html" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
