--- a/portfolio-wasted.html
+++ b/portfolio-wasted.html
@@ -73,7 +73,7 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Portfoio Details</h2>
+          <h2>Portfolio Details</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
             <li>Portfolio Details</li>
@@ -112,18 +112,16 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>Project information</h3>
+              <h3>Waste Management to Our World</h3>
               <ul>
                 <li><strong>Category</strong>: Web design</li>
                 <li><strong>Year</strong>: 2019</li>
-                <li><strong>Project URL</strong>: <a href="https://priskilaelvy.github.io/Wasted/ targert="_blank">https://priskilaelvy.github.io/Wasted/</a></li>
+                <li><strong>Project URL</strong>: <a href="https://priskilaelvy.github.io/Wasted/ target="_blank">https://priskilaelvy.github.io/Wasted/</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>This is an example of portfolio detail</h2>
-              <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
-              </p>
+              <p>This is a responsive website group project for the subject Principles of Interactive Design on my 4th semester of degree.</p>
+              <p>Team Members: Muhammad Nazmi, Mohamad Ariff, Priskila Elvy (Me), Nurul Hidayah</p>
             </div>
           </div>
 
@@ -137,18 +135,10 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <div class="copyright">
-        &copy; Copyright <strong><span>iPortfolio</span></strong>
-      </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
+      <p><i>“The only way to do great work is to love what you do. If you haven’t found it yet, keep looking. Don’t settle.”</i></p>
+      <p><i> – Steve Jobs</i></p>
     </div>
-  </footer><!-- End  Footer -->
+  </footer><!-- End Footer -->
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
