--- a/portfolio-wasted.html
+++ b/portfolio-wasted.html
@@ -56,10 +56,10 @@
 
       <nav id="navbar" class="nav-menu navbar">
         <ul>
-          <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
+          <li><a href="https://priskilaelvy.github.io/priskilaelvy-portfolio/" class="nav-link scrollto"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
+          <li><a href="#portfolio" class="nav-link scrollto active"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
           <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
@@ -94,15 +94,15 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/wasted.jpg" alt="">
+                  <img src="assets/img/portfolio/wasted.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/wasted-2.jpg" alt="">
+                  <img src="assets/img/portfolio/wasted-2.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/wasted-3.jpg" alt="">
+                  <img src="assets/img/portfolio/wasted-3.png" alt="">
                 </div>
 
               </div>
@@ -116,7 +116,7 @@
               <ul>
                 <li><strong>Category</strong>: Web design</li>
                 <li><strong>Year</strong>: 2019</li>
-                <li><strong>Project URL</strong>: <a href="https://priskilaelvy.github.io/Wasted/ target="_blank">https://priskilaelvy.github.io/Wasted/</a></li>
+                <li><strong>Project URL</strong>: <a href="https://priskilaelvy.github.io/Wasted/" target="_blank">https://priskilaelvy.github.io/Wasted/</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
