--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
@@ -308,8 +309,8 @@
                 <h4>U-See U-Act</h4>
                 <p>Internship (Mac - Aug 2021) Project</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/UCUA.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="U-See U-Act"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-UCUA.html" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/UCUA.png" data-gallery="portfolioGallery" class="venobox" title="U-See U-Act"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-UCUA.html" data-vbtype="iframe" class="venobox" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -364,6 +365,7 @@
   <!-- Vendor JS Files -->
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/venobox/venobox.min.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
