--- a/index.html
+++ b/index.html
@@ -309,8 +309,8 @@
                 <h4>U-See U-Act</h4>
                 <p>Internship (Mac - Aug 2021) Project</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/UCUA.png" data-gallery="portfolioGallery" class="venobox" title="U-See U-Act"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-UCUA.html" data-vbtype="iframe" class="venobox" title="More Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/UCUA.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="U-See U-Act"><i class="bx bx-plus"></i></a>
+                  <a href="portfolio-UCUA.html" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
