--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/wasted.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Wasted Website</h4>
+                <h4>Waste Management to Our World</h4>
                 <p>Group Project</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/wasted.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Wasted Website"><i class="bx bx-plus"></i></a>
