--- a/portfolio-wasted.html
+++ b/portfolio-wasted.html
@@ -104,6 +104,10 @@
                 <div class="swiper-slide">
                   <img src="assets/img/portfolio/wasted-3.png" alt="">
                 </div>
+                
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/wasted-4.png" alt="">
+                </div>
 
               </div>
               <div class="swiper-pagination"></div>
