--- a/portfolio-SEAS.html
+++ b/portfolio-SEAS.html
@@ -96,6 +96,10 @@
                 <div class="swiper-slide">
                   <img src="assets/img/portfolio/SEAS.png" alt="">
                 </div>
+                
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/SEAS-1.png" alt="">
+                </div>
 
                 <div class="swiper-slide">
                   <img src="assets/img/portfolio/SEAS-2.png" alt="">
